--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,12 @@
 <h1>一覧表示</h1>
-
+<%= link_to "新規作成", new_post_path %>
+<div>
+ <% @posts.each do |post| %>
+  <p>
+    <%= post.title %>
+    <%= link_to "詳細", post %>
+    <%= link_to "編集", edit_post_path(post) %>
+    <%= link_to "削除", post_path(post), method: :delete, data: { confirm: "削除しますか？"} %>
+  </p>
+ <% end %>
+</div>
